# hidden_objectives

./: .gitignore  NEEL_GRADE_EXPERIMENT.md  QUICKSTART_NEEL_GRADE.md  README.md  RUN_NEEL_GRADE_RUNPOD.md
configs/: experiment_configs.yaml
hidden_objectives_code_sample/: README.md  pyproject.toml  requirements.txt
hidden_objectives_code_sample/configs/: base_config.yaml  experiment_configs.yaml
hidden_objectives_code_sample/scripts/: analyze_experiment_2_fast.py  analyze_experiment_3.py  create_experiment_5_figure.py  run_experiment_3.py  run_experiment_5.py  run_experiments.py  run_neel_grade_experiment.py  train_lora.py  visualize_neel_grade_results.py
hidden_objectives_code_sample/src/: __init__.py
hidden_objectives_code_sample/src/evaluation/: evaluator.py  metrics.py
hidden_objectives_code_sample/src/experiments/: experiment_1_scaling.py  experiment_5_causal_tracing.py  experiment_6_causal_transfer.py  experiment_neel_grade.py
hidden_objectives_code_sample/src/training/: lora_trainer.py  model_utils.py
hidden_objectives_code_sample/src/utils/: config.py  logging.py
scripts/: analyze_experiment_1.py  analyze_experiment_3.py  create_experiment_3_focused_plot.py  evaluate_model.py  extract_experiment_2_svd.py  generate_data.py  monitor_neel_grade.sh  run_experiment_1.py  run_experiment_2.py  run_experiment_4.py  run_experiment_6.py  run_experiment_6_probe.py  run_experiments.py  run_neel_grade_quick.sh  run_neel_grade_runpod.sh  setup_neel_grade_runpod.sh  train_lora.py  upload_neel_grade_to_runpod.sh  visualize_experiment_6_probe.py
(+13 files in other folders)
